[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_helpers"  # The name used for 'pip install'
version = "0.1.0"
description = "Helper functions for Machine Learning tasks"
dependencies = [
    "fireducks==1.4.4",
    "matplotlib==3.10.8",
    "missingno==0.5.2",
    "numpy==2.4.1",
    "pandas==3.0.0",
    "plotly==6.5.2",
    "scikit_learn==1.8.0",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "statsmodels==0.14.6",
    "tabulate==0.9.0",
    "torch==2.10.0",
    "torchmetrics==1.8.2",
]

[tool.setuptools]
packages = ["ml_helpers"] # The name of the folder containing __init__.py
